--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ branches:
 install: pip install .[dev,test]
 
 script:
-  - check-manifest --ignore tests*
-  - python setup.py check -m -r -s
+  - check-manifest
+  - twine check dist/*
   - flake8 .
   - python -m unittest
