--- a/setup.cfg
+++ b/setup.cfg
@@ -9,18 +9,18 @@ license_file = LICENSE
 # support. Removing this line (or setting universal to 0) will prevent
 # bdist_wheel from trying to make a universal wheel. For more see:
 # https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
-universal=0
+universal = 0
 
 [coverage:run]
 branch = True
 data_file = .coverage
 source = .
 omit =
-	*/site-packages/*
-	*__init__*
-	*tests*
-	unravel/_version.py
-	setup.py
+    */site-packages/*
+    *__init__*
+    *tests*
+    unravel/_version.py
+    setup.py
 
 [coverage:html]
 directory = coverage_report
@@ -28,16 +28,19 @@ title = Unravel coverage report
 
 [coverage:report]
 omit =
-	*/site-packages/*
-	*__init__*
-	*tests*
-	unravel/_version.py
-	setup.py
+    */site-packages/*
+    *__init__*
+    *tests*
+    unravel/_version.py
+    setup.py
 fail_under = 85
 show_missing = True
 
 [check-manifest]
 ignore =
     .bumpversion.cfg
-	tests
-	tests/*
+    tests
+    tests/*
+
+[flake8]
+ignore = E501
